Resolved issue where the index page had a slight horizontal scroll in mobile web view.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -43,13 +43,26 @@ p {
     text-transform: uppercase;
 }
 
+.row {
+    --bs-gutter-x: 0;
+}
+
 .navbar {
     position: fixed;
     top: 0;
+    left: 0;
     width: 100%;
     background-color: #000;
     z-index: 10;
     border-bottom: #6D980F solid 0.1em;
+}
+
+.navbar-toggler {
+    margin-right: 1.5rem;
+}
+
+.navbar-brand {
+    margin-left: 1.5rem;
 }
 
 .nav-item {
